--- a/index.html
+++ b/index.html
@@ -3,10 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site da Maria Luisa</title>
+    <title>Maria Luisa - Meu Portfólio</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; }
+        header { background: #4CAF50; padding: 20px; color: white; font-size: 24px; }
+        nav { margin-top: 10px; }
+        nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: bold; }
+        .container { padding: 40px; }
+        .projetos img { width: 100%; max-width: 300px; border-radius: 10px; }
+        footer { background: #333; color: white; padding: 20px; margin-top: 20px; }
+        .form-contato input, .form-contato textarea { width: 100%; max-width: 400px; padding: 10px; margin: 5px; }
+        .form-contato button { background: #4CAF50; color: white; border: none; padding: 10px; cursor: pointer; }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo ao meu site!</h1>
-    <p>Este é o meu primeiro site hospedado no GitHub Pages.</p>
+    <header>
+        <h1>Maria Luisa Silva dos Santos</h1>
+        <nav>
+            <a href="#sobre">Sobre</a>
+            <a href="#projetos">Projetos</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>
+
+    <section id="sobre" class="container">
+        <h2>Sobre Mim</h2>
+        <p>Sou engenheira química e analista de dados com experiência em BI, Power BI e SAP.</p>
+    </section>
+
+    <section id="projetos" class="container">
+        <h2>Meus Projetos</h2>
+        <div class="projetos">
+            <img src="https://via.placeholder.com/300" alt="Projeto 1">
+            <p>Dashboard de Performance em Power BI</p>
+        </div>
+        <div class="projetos">
+            <img src="https://via.placeholder.com/300" alt="Projeto 2">
+            <p>Modelo Preditivo para Controle de Qualidade</p>
+        </div>
+    </section>
+
+    <section id="contato" class="container">
+        <h2>Contato</h2>
+        <form class="form-contato">
+            <input type="text" placeholder="Nome" required><br>
+            <input type="email" placeholder="Email" required><br>
+            <textarea placeholder="Mensagem" rows="4" required></textarea><br>
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Maria Luisa - Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
